--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <!-- Academicons for Google Scholar -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/academicons@1.9.4/css/academicons.min.css">
-    <link href="http://localhost:8000/static/css/main.css" rel="stylesheet">
+    <link href="/static/css/main.css" rel="stylesheet">
     
     <!-- Meta tags -->
     <meta name="description" content="Postdoctoral researcher in neuroscience">
@@ -304,7 +304,7 @@
 
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="http://localhost:8000/static/js/main.js"></script>
+    <script src="/static/js/main.js"></script>
     
 </body>
 </html>
