--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                         <i class="fas fa-brain me-2"></i>What do I do?
                     </h3>
                     <p class="card-text">I broadly work in the field of neuroscience - to try and figure out how brains lead to behaviour. Please check out my publications and (academic) blog articles to know more.</p>
-                    <a href="/en/publications" class="btn btn-outline-primary">
-                        Publications <i class="fas fa-arrow-right ms-1"></i>
+                    <a href="/en/blog/what-i-do" class="btn btn-outline-primary">
+                        Read More <i class="fas fa-arrow-right ms-1"></i>
                     </a>
                 </div>
             </div>
@@ -187,7 +187,7 @@
                     <h3 class="card-title text-info">
                         <i class="fas fa-globe me-2"></i>Where do I come from?
                     </h3>
-                    <p class="card-text">I was born in the banlieues (suburban areas) of the city of Calcutta (West Bengal, India). I spent my childhood there, and subsequently moved to Kanpur, Lausanne, London, before moving to Paris where I currently live.</p>
+                    <p class="card-text">I was born in the banlieues of Calcutta, where I spent my childhood. I subsequently moved to Kanpur, Lausanne, London, before moving to Paris where I currently live.</p>
                     <a href="/en/blog/where-i-come-from" class="btn btn-outline-info">
                         Read more <i class="fas fa-arrow-right ms-1"></i>
                     </a>
